<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layoutDirection="rtl">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/ll_buttonsContainer"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_fillInputs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_addNote"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_addNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/add_addNote"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_back"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <TextView
                android:id="@+id/tv_fillInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_completeAllFields"
                android:textColor="#BFBFBF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_addNote"
                app:layout_constraintTop_toBottomOf="@id/tv_addNote" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@id/tv_fillInputs">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_title"
                    android:textColorHint="#D9D9D9"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/input_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/add_note"
                    android:minHeight="300dp"
                    android:textColorHint="#D9D9D9"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_action"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/background_add_note_btn"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#428DED"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/add_addNote" />

            <ImageView
                android:id="@+id/uv_action"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@android:drawable/ic_input_add"
                app:tint="#428DED" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/background_add_note_btn"
            android:text="@string/delete"
            android:textColor="#BB0000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="#F1CCCC" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>